@@ -5,7 +5,7 @@ requires 'Capture::Tiny', 0.46;
 requires 'File::Spec', 3.62;
 requires 'File::Slurp', 9999.19;
 requires 'IO::Prompt::Simple', 0.06;
-requires 'Net::GitHub', 0.87;
+requires 'Net::GitHub', 0.89;
 
 on test => sub {
     requires 'Test::More', '0.96';
